--- a/HTML-CSS-JS/index.html
+++ b/HTML-CSS-JS/index.html
@@ -34,16 +34,14 @@
       <div id="container">
         <div id="updates_and_news">
           <ol id="news">
-            <li>Web Tasarımına Başlanıldı.</li>
-            <li>asdasdasd</li>
-            <li>asdasdasd</li>
+            <li>01.03.2022-Web Tasarımına Başlanıldı.</li>
           </ol>
         </div>
         <div id="images"></div>
       </div>
 
       <div id="footer"> 
-        <p id="altyazi">Bu website, Bilal Benzer tarafından oluşturulmuştur.</p>
+        <p id="altyazi">Designed by Bilal Benzer</p>
       </div>
   </body>
 </html>
