--- a/HTML-CSS-JS/index.html
+++ b/HTML-CSS-JS/index.html
@@ -37,7 +37,9 @@
             <li>01.03.2022-Web Tasarımına Başlanıldı.</li>
           </ol>
         </div>
-        <div id="images"></div>
+        <div id="images">
+          <img src="static/home_fotolar/create_point.JPG" alt="">
+        </div>
       </div>
 
       <div id="footer"> 
