--- a/HTML-CSS-JS/index.html
+++ b/HTML-CSS-JS/index.html
@@ -38,7 +38,7 @@
           </ol>
         </div>
         <div id="images">
-          <img src="static/home_fotolar/create_point.JPG" alt="">
+          <img src="static/home_fotolar/create_point.JPG" alt="" class="new_image">
         </div>
       </div>
 
@@ -47,3 +47,6 @@
       </div>
   </body>
 </html>
+<script>
+  alert("Uygulamamız henüz geliştirme aşamasındadır. İlginiz için teşekkür ederiz. \n Bilal Benzer")
+</script>
