--- a/HTML-CSS-JS/index.html
+++ b/HTML-CSS-JS/index.html
@@ -34,11 +34,17 @@
       <div id="container">
         <div id="updates_and_news">
           <ol id="news">
-            <li>01.03.2022-Web Tasarımına Başlanıldı.</li>
+            <li>01.03.2022-Web Tasarımına Başlanıldı</li>
+            <li>Harita Servisleri Kullanılabilir Hale Getirildi</li>
+            <li>Nokta Objesi Eklenebilir, Düzenlenebilir, Simge Verilebilir, Öznitelik Eklenebilir Hale Getirildi</li>
+            <li>Farklı Koordinasyon Sistemleri Entegresi Yapıldı. Geliştirmeler Devam Edecek...</li>
+            <li>Çoklu Nokta Objesi Geliştirmelerine Başlanıldı</li>
           </ol>
         </div>
         <div id="images">
+          <img src="static/home_fotolar/haritaservisler.JPG" alt="" class="new_image">
           <img src="static/home_fotolar/create_point.JPG" alt="" class="new_image">
+          
         </div>
       </div>
 
