--- a/HTML-CSS-JS/index.html
+++ b/HTML-CSS-JS/index.html
@@ -38,7 +38,8 @@
             <li>Harita Servisleri Kullanılabilir Hale Getirildi</li>
             <li>Nokta Objesi Eklenebilir, Düzenlenebilir, Simge Verilebilir, Öznitelik Eklenebilir Hale Getirildi</li>
             <li>Farklı Koordinasyon Sistemleri Entegresi Yapıldı. Geliştirmeler Devam Edecek...</li>
-            <li>Çoklu Nokta Objesi Geliştirmelerine Başlanıldı</li>
+            <li>Çoklu Nokta Objesi Oluşturulabilir ve Haritada Gizlenip Gösterilebilir,Yaklaşılabilir</li>
+
           </ol>
         </div>
         <div id="images">
